[package]
name = "prometheus"
version = "0.1.0"
edition = "2021"

[lib]
name = "prometheus"
path = "src/lib.rs"

[[bin]]
name = "prometheus"
path = "src/main.rs"

[dependencies]
const_format = "0.2.32"
derivative = "2.2.0"
once_cell = "1.19.0"
regex = "1.10.3"
rustyline = "13.0.0"

[profile.release]
debug = true
strip = false
